--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,5 @@
 #index:
-#    path: /
+#    path: /{_locale}/
 #    controller: App\Controller\DefaultController::index
+#    requirements:
+#        _locale: '%app.locales%'
