--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -50,4 +50,7 @@ security:
         # - { path: ^/, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
     role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPERADMIN: [ROLE_ADMIN, ROLE_ARTIST]
+        ROLE_ADMIN: [ROLE_OWNER]
+        ROLE_OWNER: [ROLE_MANAGER]
+        ROLE_MANAGER: [ROLE_USER]
